k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec: # meaning configuration of this deployment
    replicas: 3
    selector: # to which pods this is going to be a deployment of 
        matchLabels:
            component: web
    template: # template for the pods
        metadata:
            labels:
                component: web #label for the pods
        spec: # spec of the container that would run inside the component:web pod
            containers:
                - name: client
                  image: henok2346/multi-client 
                  ports:
                    - containerPort: 3000
