k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: worker
    template:
        metadata: 
            labels:
                component: worker
        spec:
            containers:
                -  name: worker
                   image: henok2346/multi-worker
                   #it doesn't need a port config because no other object within the cluster would access it.
                   #but it access others
                   #this environmental variables will be created when the container is created out of this deployment
