k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
<<<<<<< HEAD
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    selector: #to what set of pods this service is pointing to
        component: web
        #The port property is going to be how other pods or other objects inside of our cluster 
        #are going to access the pod that we are kind of governing access to and 
        #The target port is going to be the port on the target pod that we are providing access to.
    ports:
        - port: 3000
          targetPort: 3000
=======
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
>>>>>>> c59b5152e6617232d80619649c46d0f809e20e49
