k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec: #specifies how this service behaves
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432 #other pods/objects must use this port to connect to the postgres server
      targetPort: 5432
