k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
<<<<<<< HEAD
    name: redis-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: redis
    ports:
        - port: 6379
          targetPort: 6379
=======
  name: redis-cluster-ip-service
spec: #specifies how this service behaves
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379 #other pods/objects must use this port to connect to the redis server
      targetPort: 6379
>>>>>>> c59b5152e6617232d80619649c46d0f809e20e49
