k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    # additional configuration options that are going to specify a little kind of 
    #higher level configuration around the ingress object being created
    annotations: 
        kubernetes.io/ingress.class: nginx # we want to create nginx controller based on the nginx project
        #configure how our copy of Nginx behaves.
        #if we end up matching a route like /api after deciding to send it to the server
        #that configuration is going first do a little bit of a rewrite on the request.
        #And essentially it's going to remove the /api part.
        nginx.ingress.kubernetes.io/rewrite-target: /$1 # remove the /api part from the request
spec:
    rules:
        - http:
            paths:
                - path: /?(.*)
                  backend:
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /api/?(.*)
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
